[gd_scene load_steps=2 format=3 uid="uid://dkhiyj4x608rw"]

[ext_resource type="Script" uid="uid://b2of4r02fmpo2" path="res://VoskAudioFileTester.gd" id="1_xxxxx"]

[node name="VoskAudioFileTester" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxxxx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Vosk Audio File Tester"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Initializing..."
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select Audio File (WAV/MP3)"

[node name="FileLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "No file selected"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ConfidenceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ResultText" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
text = "Select an audio file to test speech recognition..."
editable = false
wrap_mode = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(800, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.wav", "*.mp3")
